exercises/ch05/ex12/result
non-stric.jsの実行時はpackage.jsonをpackage.jsonをpackage.json.oldにリネームして実施。stric.jsの実行時はpackage.jsonを同じディレクトリ内に置いて実施。strict-fixed.jsの場合もpackage.jsonを同じディレクトリに置いて実施。

〇non-stric.jsの実行結果

sumi6@MyComputer MINGW64 ~/javascript/github/sample/exercises/ch05/ex12 (main)
$ node non-strict.js
{ a: 1, b: 2, obj: { a: 4, b: 4 } }

〇strict.jsの実行結果

$ node strict.js
file:///C:/Users/sumi6/javascript/github/sample/exercises/ch05/ex12/strict.js:5
  with (obj) {
  ^^^^

SyntaxError: Strict mode code may not include a with statement
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18
)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v22.14.0

〇strict-fixed.jsの実行結果

$ node strict-fixed.js
{ a: 1, b: 2, obj: { a: 4, b: 4 } }


